--- a/ClientApp/src/app/raw-material/add-supplier/search-supplier/search-supplier.component.html
+++ b/ClientApp/src/app/raw-material/add-supplier/search-supplier/search-supplier.component.html
@@ -40,7 +40,7 @@
             <th scope="col">Supplier name</th>
             <th hidden scope="col">Supplier code</th>
             <th scope="col">
-              <select id="inputState" class="form-control" style=";font-weight:600;color:black " [(ngModel)]="Case" (change)="changeappr($event)" name="cse" value="">
+              <select id="inputState" class="form-control" style="font-weight:600;color:black " [(ngModel)]="Case" (change)="changeappr($event)" name="cse" value="">
                 <option selected style="font-weight:600">All</option>
                 <option style="font-weight:600">Yes</option>
                 <option style="font-weight:600">No</option>
