customer preference changes

--- a/ClientApp/src/app/pdr-management/pdr-management.component.css
+++ b/ClientApp/src/app/pdr-management/pdr-management.component.css
@@ -111,6 +111,19 @@ label {
   transition: all 0.2s ease-in-out;
   opacity: 0;
 }
+.alert2 {
+  position: fixed;
+  top: 5%;
+  right: 50rem;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 0.25rem;
+  padding: 2rem;
+  background: #fff;
+  color: #9c645d;
+  box-shadow: 0 5px 10px -5px rgba(0, 0, 0, 0.5);
+  transition: all 0.2s ease-in-out;
+  opacity: 0;
+}
 
 .visible {
   opacity: 1;
