--- a/ClientApp/src/app/raw-material/raw-material.component.css
+++ b/ClientApp/src/app/raw-material/raw-material.component.css
@@ -12,9 +12,6 @@ p.test {
   margin: 20px;
 }
 
-input {
-  margin: 5px;
-}
 
 fieldset.scheduler-border {
   border: solid 1px #DDD !important;
@@ -95,9 +92,7 @@ p.test {
   margin: 20px;
 }
 
-input {
-  margin: 5px;
-}
+
 
 fieldset.scheduler-border {
   border: solid 1px #DDD !important;
@@ -164,8 +159,20 @@ h2.design {
   display: inline-block;
   font-size: 16px;
 }
-label{
-    display:inline-block;
-    
-    text-align:right;
+input {
+  margin: 5px;
+}
+
+label {
+  
+  text-align: right;
+  padding-right: 20px;
+  display: inline-block;
+  min-width: 120px;
+}
+label2 {
+  text-align: right;
+  padding-right: 10px;
+  display: inline-block;
+  min-width: 10px;
 }
